# Reflector

./: .dockerignore  .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  Dockerfile  README.md  VERCEL_DEPLOYMENT.md  app.py  conversations_summary.csv  create_db.py  deploy.bat  deploy.sh  docker-compose.yml  navigate.py  package-lock.json  pyproject.toml  reflektor.py  reflektor_app.py  requirements-vercel.txt  requirements.txt  vercel.json
api/: index.py  requirements.txt  sessions.py
conversations/: CASE 1.docx  CASE 10.docx  CASE 11.docx  CASE 12.docx  CASE 13.docx  CASE 14.docx  CASE 15.docx  CASE 16.docx  CASE 17.docx  CASE 18.docx  CASE 19.docx  CASE 2.docx  CASE 20.docx  CASE 21.docx  CASE 22.docx  CASE 23.docx  CASE 24.docx  CASE 25.docx  CASE 26.docx  CASE 27.docx  CASE 28.docx  CASE 29.docx  CASE 3.docx  CASE 30.docx  CASE 31.docx  CASE 32.docx  CASE 33.docx  CASE 34.docx  CASE 35.docx  CASE 36.docx  CASE 37.docx  CASE 38.docx  CASE 39.docx  CASE 4.docx  CASE 40.docx  CASE 41.docx  CASE 42.docx  CASE 43.docx  CASE 44.docx  CASE 45.docx  (+10 more)
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatWindow.css  ChatWindow.jsx  CompletionScreen.css  CompletionScreen.jsx  HistoryModal.css  HistoryModal.jsx  MessageInput.css  MessageInput.jsx  MessageList.css  MessageList.jsx  ProgressBar.css  ProgressBar.jsx  WelcomeScreen.css  WelcomeScreen.jsx
frontend/src/services/: api.js
