[project]
name = "reflector"
version = "0.1.0"
description = "Reflektor self-reflection app for Vercel deployment"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "python-dotenv>=0.21.0",
  "langchain>=0.1.0",
  "langchain-openai>=0.0.5",
  "langchain-core>=0.1.0",
  "langchain-community>=0.0.10",
  "pydantic>=2.0.0",
  "arize-phoenix>=4.0.0",
  "openinference-instrumentation-langchain>=0.1.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-exporter-otlp>=1.20.0"
]

[project.scripts]
app = "navigate:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
